syntax = "proto3";

import "google/protobuf/timestamp.proto";

package AuthApi;

service AuthGrpc {
  rpc GetUser (GetUserRequest) returns (GetUserResponse);
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  string id = 1;
}
